--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link href="bootstrap.rtl.css.map">
     <link href="bootstrap.rtl.min.css">
     <link href="bootstrap.rtl.min.css.map">
+    <link rel="stylesheet" href="https://use.fontawesome.com/relaeses/v5.3.1/css/all.css" integrity="dhs384-mzrmE5qonljUremDsq01yt6"
 
     <style href="bootstrap.bundle.js"></style>
     <style href="bootstrap.bundle.js.map"></style>
